Refactor about section, footer section

--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
 
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- --------- CSS ---------- -->
     <link rel="stylesheet" href="style.css" />
-
-    <!-- --------- FAVICON ---------- -->
-    <link
-      rel="shortcut icon"
-      href="assets/images/favicon.png"
-      type="image/x-icon"
-    />
 
     <title>Aurelio - Portofolio</title>
   </head>
@@ -73,21 +69,20 @@
             </div>
             <div class="featured-text-info">
               <p>
-                Experienced frontend developer with a passion for creating
-                visually stunning and user-friendly websites.
+                Love all things about Programming & Tech
               </p>
             </div>
-            <div class="featured-text-btn">
+            <!-- <div class="featured-text-btn">
               <button class="btn blue-btn">Hire Me</button>
               <button class="btn">
                 Download CV <i class="uil uil-file-alt"></i>
               </button>
-            </div>
+            </div> -->
             <div class="social_icons">
-              <div class="icon"><i class="uil uil-instagram"></i></div>
-              <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-              <div class="icon"><i class="uil uil-dribbble"></i></div>
-              <div class="icon"><i class="uil uil-github-alt"></i></div>
+              <a href="https://github.com/aurelioo29" class="icon" target="_blank"><i class="uil uil-github-alt"></i></a>
+              <a href="https://discord.com/users/701604338149228724" class="icon" target="_blank"><i class="uil uil-discord"></i></a>
+              <a href="https://instagram.com/aurelio29_" class="icon" target="_blank"><i class="uil uil-instagram"></i></a>
+              <a href="https://linkedin.com/in/aureliolucio" class="icon" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
             </div>
           </div>
           <div class="featured-image">
@@ -121,40 +116,38 @@
                   Front End Developer, I dream of a bright future with the
                   potential to become a competent Backend Developer.
                 </p>
-                <div class="about-btn">
+                <!-- <div class="about-btn">
                   <button class="btn">
                     Download CV <i class="uil uil-import"></i>
                   </button>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col">
               <div class="skills-box">
                 <div class="skills-header">
-                  <h3>Frontend</h3>
+                  <h3>Software & Technologies</h3>
                 </div>
                 <div class="skills-list">
-                  <span><i class="uil uil-html5"></i> HTML</span>
-                  <span>CSS</span>
-                  <span>Bootstrap</span>
-                  <span>JavaScript</span>
-                  <span>Vue</span>
-                  <span>React</span>
-                  <span>Angular</span>
+                  <span data-text="HTML"><img src="https://skillicons.dev/icons?i=html" alt=""></span>
+                  <span data-text="CSS"><img src="https://skillicons.dev/icons?i=css" alt=""></span>
+                  <span data-text="Tailwind"><img src="https://skillicons.dev/icons?i=tailwind" alt=""></span>
+                  <span data-text="Bootstrap"><img src="https://skillicons.dev/icons?i=bootstrap" alt=""></span>
+                  <span data-text="Javascript"><img src="https://skillicons.dev/icons?i=javascript" alt=""></span>
+                  <span data-text="C++"><img src="https://skillicons.dev/icons?i=cpp" alt=""></span>
+                  <span data-text="C"><img src="https://skillicons.dev/icons?i=c" alt=""></span>
+                  <span data-text="PHP"><img src="https://skillicons.dev/icons?i=php" alt=""></span>
+                  <span data-text="Python"><img src="https://skillicons.dev/icons?i=python" alt=""></span>
+                  <span data-text="VsCode"><img src="https://skillicons.dev/icons?i=vscode" alt=""></span>
+                  <span data-text="Visual Studio"><img src="https://skillicons.dev/icons?i=visualstudio" alt=""></span>
+                  <span data-text="Figma"><img src="https://skillicons.dev/icons?i=figma" alt=""></span>
+                  <span data-text="Git"><img src="https://skillicons.dev/icons?i=git" alt=""></span>
+                  <span data-text="MYSQL"><img src="https://skillicons.dev/icons?i=mysql" alt=""></span>
+                  <span data-text="Ubuntu"><img src="https://skillicons.dev/icons?i=ubuntu" alt=""></span>
+                  <span data-text="Windows"><img src="https://skillicons.dev/icons?i=windows" alt=""></span>
                 </div>
               </div>
-              <div class="skills-box">
-                <div class="skills-header">
-                  <h3>Backend</h3>
-                </div>
-                <div class="skills-list">
-                  <span>PHP</span>
-                  <span>JAVA</span>
-                  <span>Python</span>
-                  <span>C++</span>
-                </div>
-              </div>
-              <div class="skills-box">
+              <!-- <div class="skills-box">
                 <div class="skills-header">
                   <h3>Database</h3>
                 </div>
@@ -163,7 +156,7 @@
                   <span>PostgreSQL</span>
                   <span>MongoDB</span>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
@@ -204,8 +197,7 @@
             <div class="col">
               <div class="contact-info">
                 <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                <p><i class="uil uil-envelope"></i> Email: john@doe.com</p>
-                <p><i class="uil uil-phone"></i> Tel: +250 708 770 000</p>
+                <p><i class="uil uil-envelope"></i>Email: aureliolucio5@gmail.com</p>
               </div>
             </div>
             <div class="col">
@@ -248,10 +240,10 @@
           </ul>
         </div>
         <div class="footer-social-icons">
-          <div class="icon"><i class="uil uil-instagram"></i></div>
-          <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-          <div class="icon"><i class="uil uil-dribbble"></i></div>
-          <div class="icon"><i class="uil uil-github-alt"></i></div>
+          <a href="https://github.com/aurelioo29" class="icon" target="_blank"><i class="uil uil-github-alt"></i></a>
+          <a href="https://discord.com/users/701604338149228724" class="icon" target="_blank"><i class="uil uil-discord"></i></a>
+          <a href="https://instagram.com/aurelio29_" class="icon" target="_blank"><i class="uil uil-instagram"></i></a>
+          <a href="https://linkedin.com/in/aureliolucio" class="icon" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
         </div>
         <div class="bottom-footer">
           <p>
