--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     />
 
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- --------- CSS ---------- -->
     <link rel="stylesheet" href="style.css" />
@@ -68,9 +74,7 @@
               <p>I'm <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
-              <p>
-                Love all things about Programming & Tech
-              </p>
+              <p>Love all things about Programming & Tech</p>
             </div>
             <!-- <div class="featured-text-btn">
               <button class="btn blue-btn">Hire Me</button>
@@ -79,10 +83,30 @@
               </button>
             </div> -->
             <div class="social_icons">
-              <a href="https://github.com/aurelioo29" class="icon" target="_blank"><i class="uil uil-github-alt"></i></a>
-              <a href="https://discord.com/users/701604338149228724" class="icon" target="_blank"><i class="uil uil-discord"></i></a>
-              <a href="https://instagram.com/aurelio29_" class="icon" target="_blank"><i class="uil uil-instagram"></i></a>
-              <a href="https://linkedin.com/in/aureliolucio" class="icon" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+              <a
+                href="https://github.com/aurelioo29"
+                class="icon"
+                target="_blank"
+                ><i class="uil uil-github-alt"></i
+              ></a>
+              <a
+                href="https://discord.com/users/701604338149228724"
+                class="icon"
+                target="_blank"
+                ><i class="uil uil-discord"></i
+              ></a>
+              <a
+                href="https://instagram.com/aurelio29_"
+                class="icon"
+                target="_blank"
+                ><i class="uil uil-instagram"></i
+              ></a>
+              <a
+                href="https://linkedin.com/in/aureliolucio"
+                class="icon"
+                target="_blank"
+                ><i class="uil uil-linkedin-alt"></i
+              ></a>
             </div>
           </div>
           <div class="featured-image">
@@ -129,34 +153,60 @@
                   <h3>Software & Technologies</h3>
                 </div>
                 <div class="skills-list">
-                  <span data-text="HTML"><img src="https://skillicons.dev/icons?i=html" alt=""></span>
-                  <span data-text="CSS"><img src="https://skillicons.dev/icons?i=css" alt=""></span>
-                  <span data-text="Tailwind"><img src="https://skillicons.dev/icons?i=tailwind" alt=""></span>
-                  <span data-text="Bootstrap"><img src="https://skillicons.dev/icons?i=bootstrap" alt=""></span>
-                  <span data-text="Javascript"><img src="https://skillicons.dev/icons?i=javascript" alt=""></span>
-                  <span data-text="C++"><img src="https://skillicons.dev/icons?i=cpp" alt=""></span>
-                  <span data-text="C"><img src="https://skillicons.dev/icons?i=c" alt=""></span>
-                  <span data-text="PHP"><img src="https://skillicons.dev/icons?i=php" alt=""></span>
-                  <span data-text="Python"><img src="https://skillicons.dev/icons?i=python" alt=""></span>
-                  <span data-text="VsCode"><img src="https://skillicons.dev/icons?i=vscode" alt=""></span>
-                  <span data-text="Visual Studio"><img src="https://skillicons.dev/icons?i=visualstudio" alt=""></span>
-                  <span data-text="Figma"><img src="https://skillicons.dev/icons?i=figma" alt=""></span>
-                  <span data-text="Git"><img src="https://skillicons.dev/icons?i=git" alt=""></span>
-                  <span data-text="MYSQL"><img src="https://skillicons.dev/icons?i=mysql" alt=""></span>
-                  <span data-text="Ubuntu"><img src="https://skillicons.dev/icons?i=ubuntu" alt=""></span>
-                  <span data-text="Windows"><img src="https://skillicons.dev/icons?i=windows" alt=""></span>
+                  <span data-text="HTML"
+                    ><img src="https://skillicons.dev/icons?i=html" alt=""
+                  /></span>
+                  <span data-text="CSS"
+                    ><img src="https://skillicons.dev/icons?i=css" alt=""
+                  /></span>
+                  <span data-text="Tailwind"
+                    ><img src="https://skillicons.dev/icons?i=tailwind" alt=""
+                  /></span>
+                  <span data-text="Bootstrap"
+                    ><img src="https://skillicons.dev/icons?i=bootstrap" alt=""
+                  /></span>
+                  <span data-text="Javascript"
+                    ><img
+                      src="https://skillicons.dev/icons?i=javascript"
+                      alt=""
+                  /></span>
+                  <span data-text="C++"
+                    ><img src="https://skillicons.dev/icons?i=cpp" alt=""
+                  /></span>
+                  <span data-text="C"
+                    ><img src="https://skillicons.dev/icons?i=c" alt=""
+                  /></span>
+                  <span data-text="PHP"
+                    ><img src="https://skillicons.dev/icons?i=php" alt=""
+                  /></span>
+                  <span data-text="Python"
+                    ><img src="https://skillicons.dev/icons?i=python" alt=""
+                  /></span>
+                  <span data-text="VsCode"
+                    ><img src="https://skillicons.dev/icons?i=vscode" alt=""
+                  /></span>
+                  <span data-text="Visual Studio"
+                    ><img
+                      src="https://skillicons.dev/icons?i=visualstudio"
+                      alt=""
+                  /></span>
+                  <span data-text="Figma"
+                    ><img src="https://skillicons.dev/icons?i=figma" alt=""
+                  /></span>
+                  <span data-text="Git"
+                    ><img src="https://skillicons.dev/icons?i=git" alt=""
+                  /></span>
+                  <span data-text="MYSQL"
+                    ><img src="https://skillicons.dev/icons?i=mysql" alt=""
+                  /></span>
+                  <span data-text="Ubuntu"
+                    ><img src="https://skillicons.dev/icons?i=ubuntu" alt=""
+                  /></span>
+                  <span data-text="Windows"
+                    ><img src="https://skillicons.dev/icons?i=windows" alt=""
+                  /></span>
                 </div>
               </div>
-              <!-- <div class="skills-box">
-                <div class="skills-header">
-                  <h3>Database</h3>
-                </div>
-                <div class="skills-list">
-                  <span>MySQL</span>
-                  <span>PostgreSQL</span>
-                  <span>MongoDB</span>
-                </div>
-              </div> -->
             </div>
           </div>
         </section>
@@ -197,7 +247,9 @@
             <div class="col">
               <div class="contact-info">
                 <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                <p><i class="uil uil-envelope"></i>Email: aureliolucio5@gmail.com</p>
+                <p>
+                  <i class="uil uil-envelope"></i>Email: aureliolucio5@gmail.com
+                </p>
               </div>
             </div>
             <div class="col">
@@ -240,10 +292,27 @@
           </ul>
         </div>
         <div class="footer-social-icons">
-          <a href="https://github.com/aurelioo29" class="icon" target="_blank"><i class="uil uil-github-alt"></i></a>
-          <a href="https://discord.com/users/701604338149228724" class="icon" target="_blank"><i class="uil uil-discord"></i></a>
-          <a href="https://instagram.com/aurelio29_" class="icon" target="_blank"><i class="uil uil-instagram"></i></a>
-          <a href="https://linkedin.com/in/aureliolucio" class="icon" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+          <a href="https://github.com/aurelioo29" class="icon" target="_blank"
+            ><i class="uil uil-github-alt"></i
+          ></a>
+          <a
+            href="https://discord.com/users/701604338149228724"
+            class="icon"
+            target="_blank"
+            ><i class="uil uil-discord"></i
+          ></a>
+          <a
+            href="https://instagram.com/aurelio29_"
+            class="icon"
+            target="_blank"
+            ><i class="uil uil-instagram"></i
+          ></a>
+          <a
+            href="https://linkedin.com/in/aureliolucio"
+            class="icon"
+            target="_blank"
+            ><i class="uil uil-linkedin-alt"></i
+          ></a>
         </div>
         <div class="bottom-footer">
           <p>
